namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jrivera
  labels:
    tipo: desarrollo
