deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: app
spec:
  replicas: 7
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: isaac21/app:v1
        ports:
        - containerPort: 80
