deployment_sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: sql
spec:
  selector:
    matchLabels:
      app: sql
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: app
        image: isaac21/sql:v1
        ports:
        - containerPort: 3306
