svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: app
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30011
    protocol: TCP
  selector:
    app: app
