ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  annotations:
    apache.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.jrivera.com
    http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
